[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/art/qbook/qbook-screen.svg" type="Texture" id=1]
[ext_resource path="res://assets/fonts/Roboto-Italic.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Entities/CardManager/CardManager.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/QBook/OpenedQbook.gd" type="Script" id=4]
[ext_resource path="res://Entities/Player/Player.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 55
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 14.77, 602.353 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=3]
resource_name = "open"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 14.77, 602.353 ), Vector2( 14.77, 12.353 ), Vector2( 14.77, 26.353 ) ]
}

[node name="OpenedQbook" type="TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 14.77
margin_top = 602.353
margin_right = 1013.77
margin_bottom = 1157.35
texture = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 44.0
margin_top = 54.0
margin_right = 233.0
margin_bottom = 139.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "QMail"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardManager" parent="." instance=ExtResource( 3 )]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 2 )
anims/open = SubResource( 3 )

[node name="CloseTimer" type="Timer" parent="."]
wait_time = 0.6
one_shot = true

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 897.735, 83.321 )

[connection signal="close_card" from="CardManager" to="." method="_on_CardManager_close_card"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="CloseTimer" to="." method="_on_CloseTimer_timeout"]
